Lab-10.txt
use Student
already on db Student
db.Student.insertMany([{ "_id": 1, "name": "John", "age": 30, "city": "New York", "isActive": true }
{ "_id": 2, "name": "Jane", "age": 25, "city": "Los Angeles", "isActive": false }
{ "_id": 3, "name": "Tom", "age": 35, "city": "Chicago", "isActive": true }
{ "_id": 4, "name": "Lucy", "age": 28, "city": "San Francisco", "isActive": true }
{ "_id": 5, "name": "David", "age": 40, "city": "Miami", "isActive": false }
{ "_id": 6, "name": "Eva", "age": 23, "city": "Boston", "isActive": true }
{ "_id": 7, "name": "Nick", "age": 38, "city": "Seattle", "isActive": false }
{ "_id": 8, "name": "Sophia", "age": 27, "city": "New York", "isActive": true }
{ "_id": 9, "name": "Liam", "age": 32, "city": "Los Angeles", "isActive": false }
{ "_id": 10, "name": "Olivia", "age": 29, "city": "San Diego", "isActive": true }])
SyntaxError: Unexpected token, expected "," (2:0)

  1 | db.Student.insertMany([{ "_id": 1, "name": "John", "age": 30, "city": "New York", "isActive": true }
> 2 | { "_id": 2, "name": "Jane", "age": 25, "city": "Los Angeles", "isActive": false }
    | ^
  3 | { "_id": 3, "name": "Tom", "age": 35, "city": "Chicago", "isActive": true }
  4 | { "_id": 4, "name": "Lucy", "age": 28, "city": "San Francisco", "isActive": true }
  5 | { "_id": 5, "name": "David", "age": 40, "city": "Miami", "isActive": false }
db.Student.insertMany([{ "_id": 1, "name": "John", "age": 30, "city": "New York", "isActive": true },
{ "_id": 2, "name": "Jane", "age": 25, "city": "Los Angeles", "isActive": false },
{ "_id": 3, "name": "Tom", "age": 35, "city": "Chicago", "isActive": true },
{ "_id": 4, "name": "Lucy", "age": 28, "city": "San Francisco", "isActive": true },
{ "_id": 5, "name": "David", "age": 40, "city": "Miami", "isActive": false },
{ "_id": 6, "name": "Eva", "age": 23, "city": "Boston", "isActive": true },
{ "_id": 7, "name": "Nick", "age": 38, "city": "Seattle", "isActive": false },
{ "_id": 8, "name": "Sophia", "age": 27, "city": "New York", "isActive": true },
{ "_id": 9, "name": "Liam", "age": 32, "city": "Los Angeles", "isActive": false },
{ "_id": 10, "name": "Olivia", "age": 29, "city": "San Diego", "isActive": true }])
{
  acknowledged: true,
  insertedIds: {
    '0': 1,
    '1': 2,
    '2': 3,
    '3': 4,
    '4': 5,
    '5': 6,
    '6': 7,
    '7': 8,
    '8': 9,
    '9': 10
  }
}
db.Student.updateOne({"name" : "John"} , {$set:{"age" : 31}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db.Student.updateOne({"city" : "New York"} , {$set: {"city" : "New Jersey"}})











{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db.Student.find()
{
  _id: 1,
  name: 'John',
  age: 31,
  city: 'New Jersey',
  isActive: true
}
{
  _id: 2,
  name: 'Jane',
  age: 25,
  city: 'Los Angeles',
  isActive: false
}
{
  _id: 3,
  name: 'Tom',
  age: 35,
  city: 'Chicago',
  isActive: true
}
{
  _id: 4,
  name: 'Lucy',
  age: 28,
  city: 'San Francisco',
  isActive: true
}
{
  _id: 5,
  name: 'David',
  age: 40,
  city: 'Miami',
  isActive: false
}
{
  _id: 6,
  name: 'Eva',
  age: 23,
  city: 'Boston',
  isActive: true
}
{
  _id: 7,
  name: 'Nick',
  age: 38,
  city: 'Seattle',
  isActive: false
}
{
  _id: 8,
  name: 'Sophia',
  age: 27,
  city: 'New York',
  isActive: true
}
{
  _id: 9,
  name: 'Liam',
  age: 32,
  city: 'Los Angeles',
  isActive: false
}
{
  _id: 10,
  name: 'Olivia',
  age: 29,
  city: 'San Diego',
  isActive: true
}
db.Student.updateMany({"city" : "New York"} , {$set: {"city" : "New Jersey"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db.Student.find()
{
  _id: 1,
  name: 'John',
  age: 31,
  city: 'New Jersey',
  isActive: true
}
{
  _id: 2,
  name: 'Jane',
  age: 25,
  city: 'Los Angeles',
  isActive: false
}
{
  _id: 3,
  name: 'Tom',
  age: 35,
  city: 'Chicago',
  isActive: true
}
{
  _id: 4,
  name: 'Lucy',
  age: 28,
  city: 'San Francisco',
  isActive: true
}
{
  _id: 5,
  name: 'David',
  age: 40,
  city: 'Miami',
  isActive: false
}
{
  _id: 6,
  name: 'Eva',
  age: 23,
  city: 'Boston',
  isActive: true
}
{
  _id: 7,
  name: 'Nick',
  age: 38,
  city: 'Seattle',
  isActive: false
}
{
  _id: 8,
  name: 'Sophia',
  age: 27,
  city: 'New Jersey',
  isActive: true
}
{
  _id: 9,
  name: 'Liam',
  age: 32,
  city: 'Los Angeles',
  isActive: false
}
{
  _id: 10,
  name: 'Olivia',
  age: 29,
  city: 'San Diego',
  isActive: true
}
db.Student.updateMany({"age" : {$gt : 35}}, {"isActive" : false})
MongoInvalidArgumentError: Update document requires atomic operators
db.Student.updateMany({"age" : {$gt : 35}}, {$set:{"isActive" : false}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 2,
  modifiedCount: 0,
  upsertedCount: 0
}
db.Student.updateMany({},{$inc : {"age" : 1}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 10,
  modifiedCount: 10,
  upsertedCount: 0
}
db.Student.updateMany({"city" : "Eva"} , {$set : {"city" : "Cambridge"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 0,
  modifiedCount: 0,
  upsertedCount: 0
}
db.Student.updateMany({"name" : "Eva"} , {$set : {"city" : "Cambridge"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db.Student.updateMany({"name" : "Sophia"} , {$set : {"isActive" : false}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db.Student.updateMany({"age" : {$lt : 30}} , {$set : {"city" : "San Diego"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 4,
  modifiedCount: 4,
  upsertedCount: 0
}
db.Student.updateMany({} , {$rename : {"age" : "years"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 10,
  modifiedCount: 10,
  upsertedCount: 0
}
db.Student.updateMany({"name" : "Nick"} , {$set : {"isActive" : true}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db.Student.updateMany({} , {$set : {"country" : "USA"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 10,
  modifiedCount: 10,
  upsertedCount: 0
}
db.Student.updateMany({"name" : "David"} , {$set : {"city" : "Orlando"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db.Student.updateMany({} , {$mul : {years: 2}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 10,
  modifiedCount: 10,
  upsertedCount: 0
}
db.Student.updateMany({"name" : "Tom"} , {$unset : {city : ""}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db.Student.updateMany({"years" : {$gt : 30}} , {$set : {"premiumUser" : true}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 10,
  modifiedCount: 10,
  upsertedCount: 0
}
db.Student.updateMany({"name" : "Jane"} , {$set : {"isActive" : true}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db.Student.updateMany({"name" : "Lucy"} , {$set : {"isActive" : false}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 1,
  modifiedCount: 1,
  upsertedCount: 0
}
db.Student.deleteMany({"name" : "Nick"})
{
  acknowledged: true,
  deletedCount: 1
}
db.Student.deleteMany({"isActive" : false})
{
  acknowledged: true,
  deletedCount: 4
}
db.Student.deleteMany({"city" : "New York"})
{
  acknowledged: true,
  deletedCount: 0
}
db.Student.deleteMany({"years" : {$gt : 35}})
{
  acknowledged: true,
  deletedCount: 5
}
db.Student.deleteMany({"name" : "Olivia"})
{
  acknowledged: true,
  deletedCount: 0
}
db.Student.deleteMany({"years" : {$lt : 25}})
{
  acknowledged: true,
  deletedCount: 0
}
db.Student.deleteOne({"isActive" : true})
{
  acknowledged: true,
  deletedCount: 0
}
db.Student.deleteMany({"city" : "Los Angeles"})
{
  acknowledged: true,
  deletedCount: 0
}
db.Student.find()
db.Student.deleteMany({"city" : {$exists : false}})
{
  acknowledged: true,
  deletedCount: 0
}
db.Student.updateMany({} , {$rename: {"city" : "location"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 0,
  modifiedCount: 0,
  upsertedCount: 0
}
db.Student.updateMany({"name" : "John"} , {$rename: {"name" : "FullName"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 0,
  modifiedCount: 0,
  upsertedCount: 0
}
db.Student.updateMany({} , {$rename: {"isActive" : "Status"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 0,
  modifiedCount: 0,
  upsertedCount: 0
}
db.Student.updateMany({"city" : "San Francisco"} , {$rename: {"age" : "yearsOld"}})
{
  acknowledged: true,
  insertedId: null,
  matchedCount: 0,
  modifiedCount: 0,
  upsertedCount: 0
}
Student
Selection deleted

